I have now finalized the code for my image carousel, by making the images loop round to avoid white space, I've hidden the overflow to make the overall look much cleaner and I have imported an external stylesheet from fontawesome to add in navigational arrows for the carousel. My next aim is to begin finalizing the design of the home page, and also implementing additional pages which will accessed via hyperlinks. These pages will consist of my different collections of images, allwoing the viewers to individualy navigate singualar images.

--- a/Site CSS/styles.css
+++ b/Site CSS/styles.css
@@ -1,20 +1,20 @@
 
 *{
-	background: powderblue;
-	padding 0px;
-	margin 0px;
+	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
 }
 
 .carousel-container{
 	width: 50%;
 	margin: auto;
-	
+	overflow: hidden;
+	position: relative;
 }
 .carousel-slide{
 	display: flex;
 	width: 100%;
-	height: 500px;
+	height: 600px;
 	
 }
 img{
@@ -24,3 +24,41 @@ img{
 #vertical{
 	min-width: 65%;
 }
+
+header {
+	background-color: #666;
+	padding: 10px;
+	text-align: left;
+	font-size: 20px;
+	color: white;
+}
+
+footer {
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	background-color: #777;
+	color: white;
+	text-align: center;
+	font-size: 20px;
+}
+
+#prevBtn{
+	position: absolute;
+	top: 50%;
+	z-index: 10;
+	left: 5%;
+	font-size: 45px;
+	color: white;
+	cursor: pointer;
+	}
+#nextBtn{
+	position: absolute;
+	top: 50%;
+	z-index: 10;
+	right: 5%;
+	font-size: 45px;
+	color: white;
+	cursor: pointer;
+	}
